# Petr_Novak_case_study

./: .env.example  .flake8  .gitignore  ARCHITECTURE.md  Dockerfile  Makefile  README.md  ZADANI.md  alembic.ini  docker-compose.yml  plan.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py
app/: config.py  dependencies.py  main.py
app/api/v1/: router.py  tasks.py  users.py
app/db/: session.py
app/db/models/: __init__.py  task.py  user.py
app/db/repositories/: base.py  task_repository.py  user_repository.py
app/domain/: ids.py  task.py  user.py
app/schemas/: task.py  user.py
app/services/: task_service.py  user_service.py
tests/: conftest.py  test_domain.py  test_tasks.py  test_users.py
